--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -135,6 +135,7 @@
 
     <!-- property section end -->
 
-    <script src="js/script.js"></script>
+    <script src="./App.js"></script>
   </body>
+
 </html>
