--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#Service" class="list-item">Service</a></li>
             <li><a href="#Product" class="list-item">Product</a></li>
             <li><a href="#About Us" class="list-item">About Us</a></li>
-            <li><a href="#Contact Us" class="list-item">Contact Us</a></li>
+            <li><a href="#Contact Us" class="list-item Contact">Contact Us</a></li>
           </ul>
 
           <div class="mobile-menu" onclick="showMenu()">
