--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <!-- link icon -->
 
     <link rel="icon" href="images/house.png" />
+
+
     <title>House Rent Service</title>
 
     <!-- CSS -->
 
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Rank.css">
   </head>
 
   <body>
@@ -69,13 +72,14 @@
     <form>
       <div class="container">
         <div class="coolinput">
-          <img src="images/locatio.png" alt="" id="" />
+          <img src="images/locatio.svg" alt="" id="" />
           <label for="input" class="text">location:</label>
           <input
             type="text"
             placeholder="Write here..."
             name="location"
             class="input"
+          
           />
         </div>
         <div class="coolinput">
@@ -98,10 +102,11 @@
             class="input"
           />
         </div>
-        <div class="input-btn">
+        <div class="btn">
           <button type="submit">Search Now</button>
         </div>
       </div>
+      
     </form>
 
     <!-- search section end -->
@@ -113,37 +118,38 @@
 
         <a href="" class="property-btn">
           Explore More
-          <img src="images/arrow.png" alt="" />
+          <img src="images/arrow.svg" alt="" />
         </a>
       </div>
       <div class="container">
         <div class="property-card">
-          <img src="images/property1.jpg" alt="" class="property-img" />
+          <img src="images/house1.png" alt="" class="property-img" />
           <div class="card-info">
             <div class="card-info-content">
-              <img src="images/locatio.png" alt="" />
+              <img src="images/location.svg" alt="" />
               <p class="location-name">Eastern Cape, King William's Town</p>
             </div>
             <div class="card-info-content">
               <div class="content">
-                <img src="images/bed.png" alt="" />
+                <img src="images/bed.svg" alt="" />
                 <p>4 Bed</p>
               </div>
               <div class="content">
-                <img src="images/bath.png" alt="" />
+                <img src="images/" alt="" />
                 <p>2 Bath</p>
               </div>
               <div class="content">
-                <img src="images/size.png" alt="" />
+                <img src="images/size.svg" alt="" />
                 <p>10x10m</p>
               </div>
               <div class="content">
-                <img src="images/area.png" alt="" />
+                <img src="images/area.svg" alt="" />
                 <p>20 000M</p>
               </div>
               <div class="content">
+                <img src="./images/money.svg" alt="">
                 <p>Price: R500 000</p>
-                <a href="" class="booking-btn">Book Now</a>
+                <a href="" class="btn">Book Now</a>
               </div>
             </div>
           </div>
