--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
     <link rel="icon" href="images/house.png" />
 
-
     <title>House Rent Service</title>
 
     <!-- CSS -->
 
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./Rank.css">
+    <link rel="stylesheet" href="./Rank.css" />
   </head>
 
   <body>
@@ -32,9 +31,9 @@
             <li><a href="#property" class="list-item">Properties</a></li>
             <li><a href="#Service" class="list-item">Service</a></li>
             <li><a href="#Product" class="list-item">Product</a></li>
-            <li><a href="#About Us" class="list-item">About Us</a></li>
+            <li><a href="#About" class="list-item">About</a></li>
             <li>
-              <a href="#Contact Us" class="list-item Contact">Contact Us</a>
+              <a href="#Contact" class="list-item Contact">Contact</a>
             </li>
           </ul>
 
@@ -79,7 +78,6 @@
             placeholder="Write here..."
             name="location"
             class="input"
-          
           />
         </div>
         <div class="coolinput">
@@ -106,7 +104,6 @@
           <button type="submit">Search Now</button>
         </div>
       </div>
-      
     </form>
 
     <!-- search section end -->
@@ -121,41 +118,198 @@
           <img src="images/arrow.svg" alt="" />
         </a>
       </div>
-      <div class="container">
-        <div class="property-card">
+    </section>
+
+    <div class="container">
+      <div class="property-card">
+        <div class="Popular">
           <img src="images/house1.png" alt="" class="property-img" />
+
           <div class="card-info">
-            <div class="card-info-content">
-              <img src="images/location.svg" alt="" />
-              <p class="location-name">Eastern Cape, King William's Town</p>
-            </div>
-            <div class="card-info-content">
-              <div class="content">
-                <img src="images/bed.svg" alt="" />
-                <p>4 Bed</p>
-              </div>
-              <div class="content">
-                <img src="images/" alt="" />
-                <p>2 Bath</p>
-              </div>
-              <div class="content">
-                <img src="images/size.svg" alt="" />
-                <p>10x10m</p>
-              </div>
-              <div class="content">
-                <img src="images/area.svg" alt="" />
-                <p>20 000M</p>
-              </div>
-              <div class="content">
-                <img src="./images/money.svg" alt="">
-                <p>Price: R500 000</p>
-                <a href="" class="btn">Book Now</a>
-              </div>
-            </div>
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
+          </div>
+        </div>
+        <div class="Popular">
+          <img src="images/house1.png" alt="" class="property-img" />
+
+          <div class="card-info">
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
+          </div>
+        </div>
+        <div class="Popular">
+          <img src="images/house1.png" alt="" class="property-img" />
+
+          <div class="card-info">
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
+          </div>
+        </div>
+        <div class="Popular">
+          <img src="images/house1.png" alt="" class="property-img" />
+
+          <div class="card-info">
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
+          </div>
+        </div>
+        <div class="Popular">
+          <img src="images/house1.png" alt="" class="property-img" />
+
+          <div class="card-info">
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
+          </div>
+        </div>
+        <div class="Popular">
+          <img src="images/house1.png" alt="" class="property-img" />
+
+          <div class="card-info">
+            <img src="images/location.svg" alt="" class="location-img" />
+            <h3 class="location-name">Eastern Cape, King William's Town</h3>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bed.svg" alt="" />
+            <p>4 Bed</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/bath.svg" alt="" />
+            <p>2 Bath</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/size.svg" alt="" />
+            <p>10x10m</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="images/area.svg" alt="" />
+            <p>20 000M</p>
+          </div>
+          <div class="content">
+            <img class="content-img" src="./images/money.svg" alt="" />
+            <p class="Price">Price: R500 000</p>
+          </div>
+          <div class="content-btn">
+            <a href="" class="btn">Book Now</a>
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- property section end -->
 
