--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
           <a href="index.html">House Rent Service</a>
         </div>
 
-        <div class="nav-link">
-          <ul>
-            <li><a href="#property" class="list-item">Properties</a></li>
-            <li><a href="#Service" class="list-item">Service</a></li>
-            <li><a href="#Product" class="list-item">Product</a></li>
+        
+          <ul class="nav-link">
             <li><a href="#About" class="list-item">About</a></li>
+            <li><a href="#Properties" class="list-item">Properties</a></li>
+            <li><a href="#Service" class="list-item">Service</a></li>
             <li>
-              <a href="#Contact" class="list-item Contact">Contact</a>
+              <a href="#Contact" class="list-item">Contact</a>
             </li>
+            <li><a href="#Sign" class="list-item Sign">Sign Up</a></li>
           </ul>
 
           <div class="mobile-menu" onclick="showMenu()">
             <div class="line line1"></div>
             <div class="line line2"></div>
             <div class="line line3"></div>
+            <div class="line line4"></div>
+            <div class="line line5"></div>
           </div>
-        </div>
       </div>
     </nav>
 
