--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="images/house.png" />
 
-    <title>House Rent Service</title>
+    <title>NestWise Properties</title>
 
     <!-- CSS -->
 
@@ -23,7 +23,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="logo">
-          <a href="index.html">House Rent Service</a>
+          <a href="index.html">NestWise Properties</a>
         </div>
 
         
@@ -72,7 +72,6 @@
     <form>
       <div class="container">
         <div class="coolinput">
-          <img src="images/locatio.svg" alt="" id="" />
           <label for="input" class="text">location:</label>
           <input
             type="text"
@@ -82,7 +81,6 @@
           />
         </div>
         <div class="coolinput">
-          <img src="images/locatio.png" alt="" id="" />
           <label for="input" class="text">House:</label>
           <input
             type="text"
@@ -92,7 +90,6 @@
           />
         </div>
         <div class="coolinput">
-          <img src="images/locatio.png" alt="" id="" />
           <label for="input" class="text">budget:</label>
           <input
             type="text"
@@ -155,7 +152,7 @@
           </div>
         </div>
         <div class="Popular">
-          <img src="images/house1.png" alt="" class="property-img" />
+          <img src="images/house 2.jpg" alt="" class="property-img" />
 
           <div class="card-info">
             <img src="images/location.svg" alt="" class="location-img" />
@@ -186,7 +183,7 @@
           </div>
         </div>
         <div class="Popular">
-          <img src="images/house1.png" alt="" class="property-img" />
+          <img src="images/house 3.jpg" alt="" class="property-img" />
 
           <div class="card-info">
             <img src="images/location.svg" alt="" class="location-img" />
@@ -217,7 +214,7 @@
           </div>
         </div>
         <div class="Popular">
-          <img src="images/house1.png" alt="" class="property-img" />
+          <img src="images/house 4.jpg" alt="" class="property-img" />
 
           <div class="card-info">
             <img src="images/location.svg" alt="" class="location-img" />
@@ -248,7 +245,7 @@
           </div>
         </div>
         <div class="Popular">
-          <img src="images/house1.png" alt="" class="property-img" />
+          <img src="images/house 5.jpg" alt="" class="property-img" />
 
           <div class="card-info">
             <img src="images/location.svg" alt="" class="location-img" />
@@ -279,7 +276,7 @@
           </div>
         </div>
         <div class="Popular">
-          <img src="images/house1.png" alt="" class="property-img" />
+          <img src="images/house 6.jpg" alt="" class="property-img" />
 
           <div class="card-info">
             <img src="images/location.svg" alt="" class="location-img" />
