--- a/index.html
+++ b/index.html
@@ -28,21 +28,19 @@
 
         
           <ul class="nav-link">
-            <li><a href="#About" class="list-item">About</a></li>
+            <li><a href="About.html" >About</a></li>
             <li><a href="#Properties" class="list-item">Properties</a></li>
             <li><a href="#Service" class="list-item">Service</a></li>
+            <li><a href="/Components/Contact/Contact.html" class="list-item">Contact</a></li>
             <li>
-              <a href="#Contact" class="list-item">Contact</a>
+              <a href="#Sign" class="list-item Sign">Sign Up</a>
             </li>
-            <li><a href="#Sign" class="list-item Sign">Sign Up</a></li>
           </ul>
 
           <div class="mobile-menu" onclick="showMenu()">
             <div class="line line1"></div>
             <div class="line line2"></div>
             <div class="line line3"></div>
-            <div class="line line4"></div>
-            <div class="line line5"></div>
           </div>
       </div>
     </nav>
@@ -98,9 +96,7 @@
             class="input"
           />
         </div>
-        <div class="btn">
-          <button type="submit">Search Now</button>
-        </div>
+        <a href="#" class="btn">Search Now</a>
       </div>
     </form>
 
