--- a/About.html
+++ b/About.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script
+      src="https://kit.fontawesome.com/fbe209871f.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- link icon -->
 
     <link rel="icon" href="./images/house.png" />
@@ -111,13 +114,13 @@
       <h2 class="head">Meet Our Experts</h2>
       <div class="team-grid">
         <div class="team-member">
-          <img src="./images/about/person.jpg" alt="John Doe" />
-          <h3>John Doe</h3>
+          <img src="./images/about/person.jpg" alt="Rollins" />
+          <h3>Rollins Jali</h3>
           <p>CEO</p>
         </div>
         <div class="team-member">
-          <img src="./images/about/person.jpg" alt="Jane Smith" />
-          <h3>Jane Smith</h3>
+          <img src="./images/about/khanyi.jpg" alt="Jennifer" />
+          <h3>Jennifer Sibanyoni</h3>
           <p>Senior Agent</p>
         </div>
       </div>
@@ -126,17 +129,50 @@
     <!-- Why Choose Us -->
     <section class="section">
       <h2 class="head">Why Homebuyers & Sellers Trust Us</h2>
-      <ul>
-        <li><strong>500+</strong> Happy Homeowners</li>
-        <li><strong>10+</strong> Years of Industry Experience</li>
-        <li><strong>100%</strong> Customer Satisfaction</li>
-      </ul>
+      <div class="hex-container">
+        <div>
+          <div class="hex">500+</div>
+          <div class="info">Happy Homeowners</div>
+        </div>
+        <div>
+          <div class="hex">10+</div>
+          <div class="info">Years of Industry Experience</div>
+        </div>
+        <div>
+          <div class="hex">100%</div>
+          <div class="info">Customer Satisfaction</div>
+        </div>
+      </div>
     </section>
 
     <!-- Call-to-Action -->
     <section class="section cta">
-      <h2>Let’s Find Your Perfect Property</h2>
-      <a href="#contact" class="btn">Contact Us</a>
+      <div class="cta-left">
+        <div class="cta-content">
+          <h2>Let’s Find Your Perfect Property</h2>
+          <a href="#contact" class="button">Contact Us</a>
+          <div class="cta-right">
+            <p>
+              Copyright &copy;2025; Designed by
+              <span class="designer">Kamva Hanisi</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="social-icons">
+        <a href="#" target="_blank" title="Facebook"
+          ><i class="fab fa-facebook"></i
+        ></a>
+        <a href="#" target="_blank" title="Instagram"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="#" target="_blank" title="Twitter"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a href="#" target="_blank" title="LinkedIn"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+      </div>
     </section>
   </body>
 </html>
